--- a/front/src/assets/header.css
+++ b/front/src/assets/header.css
@@ -108,6 +108,9 @@
   margin-top: -25px;
   color: #666;
 }
+.Header_right {
+  cursor: pointer;
+}
 @media screen and (max-width: 1023px) {
 
   .header_center ul li {
